# datargs

./: .gitignore  LICENSE  README.md  make-toc.sh  pyproject.toml  tox.ini
datargs/: __init__.py  convert.py  make.py  meta.py
datargs/compat/: __init__.py  attrs.py
tests/: test_arg_options.py  test_arg_type.py  test_args.py  test_parser.py  test_subcommands.py
