[tool.poetry]
name = "datargs"
version = "1.1.0"
description = "Declarative, type-safe command line argument parsers from dataclasses and attrs classes"
authors = ["Roee Nizan <roeen30@gmail.com>"]
license = "MIT"
homepage = "https://github.com/roee30/datargs"
repository = "https://github.com/roee30/datargs"
keywords = ["argparse", "dataclass", "attrs"]
readme = "README.md"
include = [
    "LICENSE"
]
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = {version = "^20.2.0", optional = true }
boltons = "^20.2.1"
typing-extensions = {version = "^3.10.0", python = "<3.8"}

[tool.poetry.extras]
attrs = ["attrs"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.2"
attrs = "^20.2.0"
ipdb = "^0.13.3"
pdbpp = "^0.10.2"
tox = "^3.24.4"
tox-pyenv = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
